--- a/.github/workflows/test-case.yml
+++ b/.github/workflows/test-case.yml
@@ -25,7 +25,7 @@ jobs:
       - name: build docker image
 
         run: |
-          docker build -t cr.yandex/$CR_REPOSITORY:${{ github.sha }} .
+          docker build -t cr.yandex/$CR_REPOSITORY:${{ github.sha }} -f project/Dockerfile .
           docker push $CR_REPOSITORY:${{ github.sha }}
 
 
