--- a/.github/workflows/test-case.yml
+++ b/.github/workflows/test-case.yml
@@ -40,7 +40,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: aws/backend
+        working-directory: deploy
     needs: build-and-push
 
     steps:
