--- a/.github/workflows/test-case.yml
+++ b/.github/workflows/test-case.yml
@@ -47,39 +47,19 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
+      - name: Deploy Serverless Container
+        id: deploy-sls-container
+        uses: yc-actions/yc-sls-container-deploy@v2
         with:
-          terraform_version: 1.5.7
-
-      - name: Terraform Init
-        run: terraform init
-
-      - name: Terraform validate
-        run: terraform validate
-
-      - name: Terraform plan
-        run: terraform plan
-
-      - name: Terraform apply
-        run: terraform apply -auto-approve
+          yc-sa-json-credentials: ${{ secrets.YC_SA_JSON_CREDENTIALS }}
+          container-name: sls-2
+          folder-id: ${{secrets.FOLDER_ID}}
+          revision-service-account-id: ${{secrets.SERVICE_ACCOUNT_ID}}
+          revision-cores: 1
+          revision-memory: 128Mb
+          revision-core-fraction: 100
+          revision-concurrency: 8
+          revision-image-url: cr.yandex/crp31fj9u7aj7h70jn5t/api:${{ github.sha }}
+          revision-execution-timeout: 100
 
 
-
-
-#      - name: Deploy Serverless Container
-#        id: deploy-sls-container
-#        uses: yc-actions/yc-sls-container-deploy@v2
-#        with:
-#          yc-sa-json-credentials: ${{ secrets.YC_SA_JSON_CREDENTIALS }}
-#          container-name: sls-2
-#          folder-id: ${{secrets.FOLDER_ID}}
-#          revision-service-account-id: ${{secrets.SERVICE_ACCOUNT_ID}}
-#          revision-cores: 1
-#          revision-memory: 128Mb
-#          revision-core-fraction: 100
-#          revision-concurrency: 8
-#          revision-image-url: cr.yandex/crp31fj9u7aj7h70jn5t/api:${{ github.sha }}
-#          revision-execution-timeout: 100
-#
-#
