--- a/.github/workflows/test-case.yml
+++ b/.github/workflows/test-case.yml
@@ -49,7 +49,7 @@ jobs:
           revision-memory: 128Mb
           revision-core-fraction: 100
           revision-concurrency: 8
-          revision-image-url: cr.yandex/$CR_ID/auth:${{ github.sha }}
+          revision-image-url: cr.yandex/crp31fj9u7aj7h70jn5t/auth:${{ github.sha }}
           revision-execution-timeout: 100
 
 
