--- a/project/Dockerfile
+++ b/project/Dockerfile
@@ -4,14 +4,14 @@ ENV PYTHONDONTWRITEBYTECODE 1  # Отключаем создание .pyc фай
 ENV PYTHONUNBUFFERED 1  # Убеждаемся, что вывод логов сразу идет в консоль (без буферизации)
 
 RUN pip install --upgrade pip
-COPY requirements/requirements.txt .
+COPY requirements.txt .
 RUN python -m venv /opt/venv
 ENV PATH="/opt/venv/bin:$PATH"
 RUN pip install -r requirements.txt
 
 FROM python:3.12-slim
 COPY --from=builder /opt/venv /opt/venv
-COPY project/src /src
+COPY src /src
 WORKDIR /src
 RUN useradd -ms /bin/bash developer
 USER developer
