--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -18,31 +18,23 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Build Image
+        run: docker build -t tests --file tests/Dockerfile .
+      - name: Run Tests in Container
+        run: docker run --rm tests
+
       - name: Login to Yandex Cloud Container Registry
         id: login-cr
         uses: yc-actions/yc-cr-login@v2
         with:
           yc-sa-json-credentials: ${{ secrets.YC_SA_JSON_CREDENTIALS }}
 
-      - name: build docker image
-
-        run: |
-          docker build -t $IMAGE_TAG:${{ github.sha }} -f project/Dockerfile .
-          docker push $IMAGE_TAG:${{ github.sha }}
-
       - name: build and push auth service image
-
         run: |
           cd services/auth
           docker build -t cr.yandex/$CR_ID/auth:${{ github.sha }} .
           docker push cr.yandex/$CR_ID/auth:${{ github.sha }}
           
-
-      - name: build docker image
-
-        run: |
-          docker build -t $IMAGE_TAG:${{ github.sha }} -f project/Dockerfile .
-          docker push $IMAGE_TAG:${{ github.sha }}
 
       - name: Deploy Serverless Container
         id: deploy-sls-container1
@@ -58,6 +50,14 @@ jobs:
           revision-concurrency: 8
           revision-image-url: cr.yandex/crp31fj9u7aj7h70jn5t/auth:${{ github.sha }}
           revision-execution-time_out: 100
+          
+
+      - name: build docker image
+
+        run: |
+          cd project
+          docker build -t $IMAGE_TAG:${{ github.sha }} .
+          docker push $IMAGE_TAG:${{ github.sha }}
 
 
       - name: Deploy Serverless Container
