--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build Image
-        run: docker build -t tests --file tests/Dockerfile .
+        run: docker build -f infrastructure/tests/Dockerfile -t tests .
       - name: Run Tests in Container
         run: docker run --rm tests
 
