--- a/infrastructure/auth/requirements.txt
+++ b/infrastructure/auth/requirements.txt
@@ -30,11 +30,13 @@ packaging==24.2
 pluggy==1.5.0
 propcache==0.2.1
 pydantic==2.10.3
+pydantic-settings==2.7.0
 pydantic_core==2.27.1
 pyrate-limiter==3.7.0
 pytest==8.3.4
 pytest-subtests==0.7.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 python-multipart==0.0.20
 PyYAML==6.0.2
 referencing==0.35.1
