fix alembic wasn't installed

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -50,6 +50,11 @@ jobs:
         with:
           yc-sa-json-credentials: ${{ secrets.YC_SA_JSON_CREDENTIALS }}
 
+      - name: Install alembic
+        run: |
+          python -m pip install --upgrade pip
+          pip install alembic==1.14.0
+
       - name: Apply migrations
         env:
           YDB_ACCESS_TOKEN: ${{ steps.iam-token.outputs.token }}
