--- a/infrastructure/auth/requirements.txt
+++ b/infrastructure/auth/requirements.txt
@@ -11,6 +11,7 @@ frozenlist==1.5.0
 greenlet==3.1.1
 grpcio==1.68.1
 h11==0.14.0
+httptools==0.6.4
 idna==3.10
 Mako==1.3.8
 MarkupSafe==3.0.2
@@ -23,11 +24,15 @@ pydantic-settings==2.7.0
 pydantic_core==2.27.2
 python-dotenv==1.0.1
 python-multipart==0.0.20
+PyYAML==6.0.2
 sniffio==1.3.1
 SQLAlchemy==2.0.36
 starlette==0.41.3
 typing_extensions==4.12.2
 uvicorn==0.34.0
+uvloop==0.21.0
+watchfiles==1.0.3
+websockets==14.1
 yarl==1.18.3
 ydb==3.18.12
 ydb-dbapi==0.1.6
